--- a/src/part3/templates/part3/rtc_send.html
+++ b/src/part3/templates/part3/rtc_send.html
@@ -56,19 +56,34 @@
                                 self.user_count += 1
                                 if (!self.started) {
                                     self.started = true
-                                    var options = {
-                                        cacheResource: false,
-            //                            filePath: "http://www.hochmuth.com/mp3/Haydn_Cello_Concerto_D-1.mp3",
-                                        filePath: '/static/Haydn_Cello_Concerto_D-1.mp3',
-                                        cycle: 1,
-                                        replace: true,
-                                        playTime: 0
-                                    }
-                                    self.localStream.startAudioMixing(options, function (err) {
-                                        if (err) {
-                                            console.log("Failed to start audio mixing. " + err);
+
+                                    // 播放音效
+                                    self.localStream.playEffect({
+                                        soundId: 1,
+                                        filePath: '/static/Haydn_Cello_Concerto_D-1.mp3'
+                                    }, function(error) {
+                                        if (error) {
+                                            // 错误处理
+                                            return;
                                         }
+                                        // 播放成功后的流程
                                     });
+
+
+
+//                                    var options = {
+//                                        cacheResource: false,
+//            //                            filePath: "http://www.hochmuth.com/mp3/Haydn_Cello_Concerto_D-1.mp3",
+//                                        filePath: '/static/Haydn_Cello_Concerto_D-1.mp3',
+//                                        cycle: 1,
+//                                        replace: true,
+//                                        playTime: 0
+//                                    }
+//                                    self.localStream.startAudioMixing(options, function (err) {
+//                                        if (err) {
+//                                            console.log("Failed to start audio mixing. " + err);
+//                                        }
+//                                    });
                                 }
                         })
                     self.client.on("peer-leave", () => {
@@ -76,6 +91,7 @@
                         self.user_count -=1
                         if(self.user_count<=0){
                             console.log('所有人都退出了，现在退出')
+                            self.localStream.stopAllEffects()
                             self.started = false
                             self.client.leave()
                         }
