--- a/src/part3/templates/part3/rtc_send.html
+++ b/src/part3/templates/part3/rtc_send.html
@@ -74,8 +74,8 @@
 
                                     var options = {
                                         cacheResource: false,
-            //                            filePath: "http://www.hochmuth.com/mp3/Haydn_Cello_Concerto_D-1.mp3",
-                                        filePath: '/static/Haydn_Cello_Concerto_D-1.mp3',
+                                        filePath: this.mp3_url || "http://www.hochmuth.com/mp3/Haydn_Cello_Concerto_D-1.mp3",
+//                                        filePath: '/static/Haydn_Cello_Concerto_D-1.mp3',
                                         cycle: 1,
                                         replace: true,
                                         playTime: 0
