--- a/src/part3/templates/part3/rtc_panel.html
+++ b/src/part3/templates/part3/rtc_panel.html
@@ -60,7 +60,10 @@
                         console.log('stream-subscribed remote-uid: ', id);
                     })
                     }).then(()=>{
-                        this.join()
+                        return this.join()
+                    }).then(()=>{
+                        //
+                        this.publish()
                     })
                 },
                 updateclient(){
