--- a/src/part3/templates/part3/rtc_panel.html
+++ b/src/part3/templates/part3/rtc_panel.html
@@ -149,12 +149,12 @@
             <span>channel</span>
             <input type="text" v-model="channel">
         </div>
-        <div>
-            <span>mp3 url</span>
-            <input type="text" v-model="mp3_url">
-        </div>
+        <!--<div>-->
+            <!--<span>mp3 url</span>-->
+            <!--<input type="text" v-model="mp3_url">-->
+        <!--</div>-->
 
-        <button @click="send_channel()">通知server</button>
+        <!--<button @click="send_channel()">通知server</button>-->
         <button @click="real_join()">Join channel</button>
 
     </div>
